[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/GUI/HUD_level.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Level/level_training.gd" type="Script" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Level/camera_set1_2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Level/objs/triggerAreas/gameOver.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Level/objs/triggerAreas/traggerBtn.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Level/enemies/mob.tscn" type="PackedScene" id=7]
[ext_resource path="res://res/FreeTileset/tile001.tres" type="TileSet" id=8]
[ext_resource path="res://scenes/Level/objs/triggerAreas/instanceWakk.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Level/objs/dropItem.tscn" type="PackedScene" id=10]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 434, 408, 0, 0, 0, 0, 914, 406 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1066, 149, 0, 0, 0, 0, -714, 154 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 527, 140, 0, 0, 0, 0, 856, 140 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
Mob = ExtResource( 7 )
dropItem = ExtResource( 10 )

[node name="Player_RigidBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 72, 153 )
__meta__ = {
"_edit_lock_": true
}

[node name="pos_start" type="Position2D" parent="."]
position = Vector2( -28, 223 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD_level" parent="." instance=ExtResource( 1 )]

[node name="map" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="map_outbound" type="TileMap" parent="map"]
z_as_relative = false
tile_set = ExtResource( 8 )
cell_size = Vector2( 40, 40 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_bounce = 0.54
format = 1
tile_data = PoolIntArray( 327681, 12, 0, 327682, 12, 0, 327683, 12, 0, 327684, 12, 0, 327685, 12, 0, 327686, 12, 0, 327687, 12, 0, 327688, 12, 0, 327689, 12, 0, 327690, 12, 0, 327691, 12, 0, 327692, 12, 0, 327693, 12, 0, 458743, 21, 0, 458744, 21, 0, 458745, 21, 0, 458746, 21, 0, 458747, 21, 0, 458748, 21, 0, 458749, 21, 0, 458750, 21, 0, 458751, 21, 0, 393216, 21, 0, 393225, 12, 0, 393226, 12, 0, 393227, 21, 0, 393228, 21, 0, 393229, 21, 0, 393230, 19, 0, 393231, 21, 0, 393232, 21, 0, 393233, 21, 0, 393234, 21, 0, 393235, 21, 0, 393236, 21, 0, 524279, 12, 0, 524280, 12, 0, 524281, 12, 0, 524282, 12, 0, 524283, 12, 0, 524284, 12, 0, 524285, 12, 0, 524286, 12, 0, 524287, 12, 0, 458752, 12, 0, 458753, 12, 0, 458754, 12, 0, 458755, 12, 0, 458756, 12, 0, 458757, 12, 0, 458758, 12, 0, 458759, 12, 0, 458760, 12, 0, 458761, 12, 0, 458762, 12, 0, 458763, 12, 0, 458764, 12, 0, 458765, 12, 0, 458766, 12, 0, 458767, 12, 0, 458768, 12, 0, 458769, 12, 0, 458770, 12, 0, 458771, 12, 0, 458772, 12, 0, 458773, 12, 0, 655352, 11, 0, 655354, 11, 0, 655356, 11, 0, 655358, 11, 0, 589841, 11, 0, 589851, 11, 0, 589853, 11, 0, 589855, 11, 0, 655377, 12, 0, 655378, 12, 0, 655382, 12, 0, 655383, 12, 0, 655384, 12, 0, 655385, 12, 0, 655387, 12, 0, 655389, 12, 0, 655391, 12, 0, 917457, 32, 0, 917458, 32, 0, 917459, 32, 0, 917460, 32, 0, 917461, 32, 0, 917462, 32, 0, 917463, 32, 0, 917464, 32, 0, 917465, 32, 0, 917466, 32, 0, 917467, 32, 0, 917468, 32, 0, 917469, 32, 0, 917477, 32, 0, 917478, 32, 0, 917479, 32, 0, 917480, 32, 0, 917481, 32, 0, 917482, 32, 0, 917483, 32, 0, 917484, 32, 0, 917485, 32, 0, 917486, 32, 0, 917487, 32, 0, 917488, 32, 0, 917489, 32, 0, 917490, 32, 0, 917491, 32, 0, 917492, 32, 0, 917493, 32, 0, 917494, 32, 0, 917495, 32, 0, 917496, 32, 0, 917497, 32, 0, 917498, 32, 0, 917499, 32, 0, 917500, 32, 0, 917501, 32, 0, 917502, 32, 0, 917503, 32, 0, 851968, 32, 0, 851969, 32, 0, 851970, 32, 0, 851971, 32, 0, 851972, 32, 0, 851973, 32, 0, 851974, 32, 0, 851975, 32, 0, 851976, 32, 0, 851977, 32, 0, 851978, 32, 0, 851979, 32, 0, 851980, 32, 0, 851981, 32, 0, 851982, 32, 0, 851983, 32, 0, 851984, 32, 0, 851985, 32, 0, 851986, 32, 0, 851987, 32, 0, 851988, 32, 0, 851989, 32, 0, 851990, 32, 0, 851991, 32, 0, 851992, 32, 0, 851993, 32, 0, 851994, 32, 0, 851995, 32, 0, 851996, 32, 0, 851997, 32, 0, 851998, 32, 0, 851999, 32, 0, 852000, 32, 0, 852001, 32, 0, 852002, 32, 0, 852003, 32, 0, 852004, 32, 0, 852005, 32, 0, 852006, 32, 0, 982993, 33, 0, 982994, 33, 0, 982995, 33, 0, 982996, 33, 0, 982997, 33, 0, 982998, 33, 0, 982999, 33, 0, 983000, 33, 0, 983001, 33, 0, 983002, 33, 0, 983003, 33, 0, 983004, 33, 0, 983005, 33, 0, 983009, 33, 0, 983010, 33, 0, 983011, 33, 0, 983012, 33, 0, 983013, 33, 0, 983014, 33, 0, 983015, 33, 0, 983016, 33, 0, 983017, 33, 0, 983018, 33, 0, 983019, 33, 0, 983020, 33, 0, 983021, 33, 0, 983022, 33, 0, 983023, 33, 0, 983024, 33, 0, 983025, 33, 0, 983026, 33, 0, 983027, 33, 0, 983028, 33, 0, 983029, 33, 0, 983030, 33, 0, 983031, 33, 0, 983032, 33, 0, 983033, 33, 0, 983034, 33, 0, 983035, 33, 0, 983036, 33, 0, 983037, 33, 0, 983038, 33, 0, 983039, 33, 0, 917504, 33, 0, 917505, 33, 0, 917506, 33, 0, 917507, 33, 0, 917508, 33, 0, 917509, 33, 0, 917510, 33, 0, 917511, 33, 0, 917512, 33, 0, 917513, 33, 0, 917514, 33, 0, 917515, 33, 0, 917516, 33, 0, 917517, 33, 0, 917518, 33, 0, 917519, 33, 0, 917520, 33, 0, 917521, 33, 0, 917522, 33, 0, 917523, 33, 0, 917524, 33, 0, 917525, 33, 0, 917526, 33, 0, 917527, 33, 0, 917528, 33, 0, 917529, 33, 0, 917530, 33, 0, 917531, 33, 0, 917532, 33, 0, 917533, 33, 0, 917534, 33, 0, 917535, 33, 0, 917536, 33, 0, 917537, 33, 0, 917538, 33, 0, 917539, 33, 0, 917540, 33, 0, 917541, 33, 0, 917542, 33, 0, 1048529, 33, 0, 1048530, 33, 0, 1048531, 33, 0, 1048532, 33, 0, 1048533, 33, 0, 1048534, 33, 0, 1048535, 33, 0, 1048536, 33, 0, 1048537, 33, 0, 1048538, 33, 0, 1048539, 33, 0, 1048540, 33, 0, 1048541, 33, 0, 1048542, 33, 0, 1048543, 33, 0, 1048544, 33, 0, 1048545, 33, 0, 1048546, 33, 0, 1048547, 33, 0, 1048548, 33, 0, 1048549, 33, 0, 1048550, 33, 0, 1048551, 33, 0, 1048552, 33, 0, 1048553, 33, 0, 1048554, 33, 0, 1048555, 33, 0, 1048556, 33, 0, 1048557, 33, 0, 1048558, 33, 0, 1048559, 33, 0, 1048560, 33, 0, 1048561, 33, 0, 1048562, 33, 0, 1048563, 33, 0, 1048564, 33, 0, 1048565, 33, 0, 1048566, 33, 0, 1048567, 33, 0, 1048568, 33, 0, 1048569, 33, 0, 1048570, 33, 0, 1048571, 33, 0, 1048572, 33, 0, 1048573, 33, 0, 1048574, 33, 0, 1048575, 33, 0, 983040, 33, 0, 983041, 33, 0, 983042, 33, 0, 983043, 33, 0, 983044, 33, 0, 983045, 33, 0, 983046, 33, 0, 983047, 33, 0, 983048, 33, 0, 983049, 33, 0, 983050, 33, 0, 983051, 33, 0, 983052, 33, 0, 983053, 33, 0, 983054, 33, 0, 983055, 33, 0, 983056, 33, 0, 983057, 33, 0, 983058, 33, 0, 983059, 33, 0, 983060, 33, 0, 983061, 33, 0, 983062, 33, 0, 983063, 33, 0, 983064, 33, 0, 983065, 33, 0, 983066, 33, 0, 983067, 33, 0, 983068, 33, 0, 983069, 33, 0, 983070, 33, 0, 983071, 33, 0, 983072, 33, 0, 983073, 33, 0, 983074, 33, 0, 983075, 33, 0, 983076, 33, 0, 983077, 33, 0, 983078, 33, 0, 1114065, 33, 0, 1114066, 33, 0, 1114067, 33, 0, 1114068, 33, 0, 1114069, 33, 0, 1114070, 33, 0, 1114071, 33, 0, 1114072, 33, 0, 1114073, 33, 0, 1114074, 33, 0, 1114075, 33, 0, 1114076, 33, 0, 1114077, 33, 0, 1114078, 33, 0, 1114079, 33, 0, 1114080, 33, 0, 1114081, 33, 0, 1114082, 33, 0, 1114083, 33, 0, 1114084, 33, 0, 1114085, 33, 0, 1114086, 33, 0, 1114087, 33, 0, 1114088, 33, 0, 1114089, 33, 0, 1114090, 33, 0, 1114091, 33, 0, 1114092, 33, 0, 1114093, 33, 0, 1114094, 33, 0, 1114095, 33, 0, 1114096, 33, 0, 1114097, 33, 0, 1114098, 33, 0, 1114099, 33, 0, 1114100, 33, 0, 1114101, 33, 0, 1114102, 33, 0, 1114103, 33, 0, 1114104, 33, 0, 1114105, 33, 0, 1114106, 33, 0, 1114107, 33, 0, 1114108, 33, 0, 1114109, 33, 0, 1114110, 33, 0, 1114111, 33, 0, 1048576, 33, 0, 1048577, 33, 0, 1048578, 33, 0, 1048579, 33, 0, 1048580, 33, 0, 1048581, 33, 0, 1048582, 33, 0, 1048583, 33, 0, 1048584, 33, 0, 1048585, 33, 0, 1048586, 33, 0, 1048587, 33, 0, 1048588, 33, 0, 1048589, 33, 0, 1048590, 33, 0, 1048591, 33, 0, 1048592, 33, 0, 1048593, 33, 0, 1048594, 33, 0, 1048595, 33, 0, 1048596, 33, 0, 1048597, 33, 0, 1048598, 33, 0, 1048599, 33, 0, 1048600, 33, 0, 1048601, 33, 0, 1048602, 33, 0, 1048603, 33, 0, 1048604, 33, 0, 1048605, 33, 0, 1048606, 33, 0, 1048607, 33, 0, 1048608, 33, 0, 1048609, 33, 0, 1048610, 33, 0, 1048611, 33, 0, 1048612, 33, 0, 1048613, 33, 0, 1048614, 33, 0, 1179601, 33, 0, 1179602, 33, 0, 1179603, 33, 0, 1179604, 33, 0, 1179605, 33, 0, 1179606, 33, 0, 1179607, 33, 0, 1179608, 33, 0, 1179609, 33, 0, 1179610, 33, 0, 1179611, 33, 0, 1179612, 33, 0, 1179613, 33, 0, 1179614, 33, 0, 1179615, 33, 0, 1179616, 33, 0, 1179617, 33, 0, 1179618, 33, 0, 1179619, 33, 0, 1179620, 33, 0, 1179621, 33, 0, 1179622, 33, 0, 1179623, 33, 0, 1179624, 33, 0, 1179625, 33, 0, 1179626, 33, 0, 1179627, 33, 0, 1179628, 33, 0, 1179629, 33, 0, 1179630, 33, 0, 1179631, 33, 0, 1179632, 33, 0, 1179633, 33, 0, 1179634, 33, 0, 1179635, 33, 0, 1179636, 33, 0, 1179637, 33, 0, 1179638, 33, 0, 1179639, 33, 0, 1179640, 33, 0, 1179641, 33, 0, 1179642, 33, 0, 1179643, 33, 0, 1179644, 33, 0, 1179645, 33, 0, 1179646, 33, 0, 1179647, 33, 0, 1114112, 33, 0, 1114113, 33, 0, 1114114, 33, 0, 1114115, 33, 0, 1114116, 33, 0, 1114117, 33, 0, 1114118, 33, 0, 1114119, 33, 0, 1114120, 33, 0, 1114121, 33, 0, 1114122, 33, 0, 1114123, 33, 0, 1114124, 33, 0, 1114125, 33, 0, 1114126, 33, 0, 1114127, 33, 0, 1114128, 33, 0, 1114129, 33, 0, 1114130, 33, 0, 1114131, 33, 0, 1114132, 33, 0, 1114133, 33, 0, 1114134, 33, 0, 1114135, 33, 0, 1114136, 33, 0, 1114137, 33, 0, 1114138, 33, 0, 1114139, 33, 0, 1114140, 33, 0, 1114141, 33, 0, 1114142, 33, 0, 1114143, 33, 0, 1114144, 33, 0, 1114145, 33, 0, 1114146, 33, 0, 1114147, 33, 0, 1114148, 33, 0, 1114149, 33, 0, 1114150, 33, 0, 1245137, 33, 0, 1245138, 33, 0, 1245139, 33, 0, 1245140, 33, 0, 1245141, 33, 0, 1245142, 33, 0, 1245143, 33, 0, 1245144, 33, 0, 1245145, 33, 0, 1245146, 33, 0, 1245147, 33, 0, 1245148, 33, 0, 1245149, 33, 0, 1245150, 33, 0, 1245151, 33, 0, 1245152, 33, 0, 1245153, 33, 0, 1245154, 33, 0, 1245155, 33, 0, 1245156, 33, 0, 1245157, 33, 0, 1245158, 33, 0, 1245159, 33, 0, 1245160, 33, 0, 1245161, 33, 0, 1245162, 33, 0, 1245163, 33, 0, 1245164, 33, 0, 1245165, 33, 0, 1245166, 33, 0, 1245167, 33, 0, 1245168, 33, 0, 1245169, 33, 0, 1245170, 33, 0, 1245171, 33, 0, 1245172, 33, 0, 1245173, 33, 0, 1245174, 33, 0, 1245175, 33, 0, 1245176, 33, 0, 1245177, 33, 0, 1245178, 33, 0, 1245179, 33, 0, 1245180, 33, 0, 1245181, 33, 0, 1245182, 33, 0, 1245183, 33, 0, 1179648, 33, 0, 1179649, 33, 0, 1179650, 33, 0, 1179651, 33, 0, 1179652, 33, 0, 1179653, 33, 0, 1179654, 33, 0, 1179655, 33, 0, 1179656, 33, 0, 1179657, 33, 0, 1179658, 33, 0, 1179659, 33, 0, 1179660, 33, 0, 1179661, 33, 0, 1179662, 33, 0, 1179663, 33, 0, 1179664, 33, 0, 1179665, 33, 0, 1179666, 33, 0, 1179667, 33, 0, 1179668, 33, 0, 1179669, 33, 0, 1179670, 33, 0, 1179671, 33, 0, 1179672, 33, 0, 1179673, 33, 0, 1179674, 33, 0, 1179675, 33, 0, 1179676, 33, 0, 1179677, 33, 0, 1179678, 33, 0, 1179679, 33, 0, 1179680, 33, 0, 1179681, 33, 0, 1179682, 33, 0, 1179683, 33, 0, 1179684, 33, 0, 1179685, 33, 0, 1179686, 33, 0, 1310673, 33, 0, 1310674, 33, 0, 1310675, 33, 0, 1310676, 33, 0, 1310677, 33, 0, 1310678, 33, 0, 1310679, 33, 0, 1310680, 33, 0, 1310681, 33, 0, 1310682, 33, 0, 1310683, 33, 0, 1310684, 33, 0, 1310685, 33, 0, 1310686, 33, 0, 1310687, 33, 0, 1310688, 33, 0, 1310689, 33, 0, 1310690, 33, 0, 1310691, 33, 0, 1310692, 33, 0, 1310693, 33, 0, 1310694, 33, 0, 1310695, 33, 0, 1310696, 33, 0, 1310697, 33, 0, 1310698, 33, 0, 1310699, 33, 0, 1310700, 33, 0, 1310701, 33, 0, 1310702, 33, 0, 1310703, 33, 0, 1310704, 33, 0, 1245221, 33, 0, 1376209, 33, 0, 1376210, 33, 0, 1376211, 33, 0, 1376212, 33, 0, 1376213, 33, 0, 1376214, 33, 0, 1376215, 33, 0, 1376216, 33, 0, 1376217, 33, 0, 1376218, 33, 0, 1376219, 33, 0, 1376220, 33, 0, 1376221, 33, 0, 1376222, 33, 0, 1376223, 33, 0, 1376224, 33, 0, 1376225, 33, 0, 1376226, 33, 0, 1376227, 33, 0, 1376228, 33, 0, 1376229, 33, 0, 1376230, 33, 0, 1376231, 33, 0, 1376232, 33, 0, 1376233, 33, 0, 1376234, 33, 0, 1376235, 33, 0, 1376236, 33, 0, 1376237, 33, 0, 1376238, 33, 0, 1376239, 33, 0, 1441745, 33, 0 )

[node name="map_base" type="TileMap" parent="map"]
z_as_relative = false
tile_set = ExtResource( 8 )
cell_size = Vector2( 40, 40 )
cell_quadrant_size = 10
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_use_kinematic = true
collision_bounce = 1.0
format = 1
tile_data = PoolIntArray( -458786, 27, 0, -458785, 27, 0, -458784, 27, 0, -458783, 27, 0, -458782, 27, 0, -458781, 27, 0, -458780, 27, 0, -458779, 27, 0, -458778, 27, 0, -458777, 27, 0, -458776, 27, 0, -458775, 27, 0, -458774, 27, 0, -458773, 27, 0, -458772, 27, 0, -458771, 27, 0, -458770, 27, 0, -458769, 27, 0, -458768, 27, 0, -458767, 27, 0, -458766, 27, 0, -458765, 27, 0, -458764, 27, 0, -458763, 27, 0, -458762, 27, 0, -458761, 27, 0, -458760, 27, 0, -458759, 27, 0, -458758, 27, 0, -458757, 27, 0, -458756, 27, 0, -458755, 27, 0, -458754, 27, 0, -458753, 27, 0, -524288, 27, 0, -524287, 27, 0, -524286, 27, 0, -524285, 27, 0, -524284, 27, 0, -524283, 27, 0, -524282, 27, 0, -524281, 27, 0, -524280, 27, 0, -524279, 27, 0, -524278, 27, 0, -524277, 27, 0, -524276, 27, 0, -524275, 27, 0, -524274, 27, 0, -524273, 27, 0, -524272, 27, 0, -524271, 27, 0, -524270, 27, 0, -524269, 27, 0, -524268, 27, 0, -524267, 27, 0, -524266, 27, 0, -524265, 27, 0, -524264, 27, 0, -524263, 27, 0, -524262, 27, 0, -524261, 27, 0, -393250, 27, 0, -393249, 27, 0, -393248, 27, 0, -393247, 27, 0, -393246, 30, 0, -393245, 30, 0, -393244, 30, 0, -393243, 30, 0, -393242, 30, 0, -393241, 30, 0, -393240, 30, 0, -393239, 30, 0, -393238, 30, 0, -393237, 30, 0, -393236, 30, 0, -393235, 30, 0, -393234, 30, 0, -393233, 30, 0, -393232, 30, 0, -393231, 30, 0, -393230, 30, 0, -393229, 30, 0, -393228, 30, 0, -393227, 30, 0, -393226, 30, 0, -393225, 30, 0, -393224, 30, 0, -393223, 30, 0, -393222, 30, 0, -393221, 27, 0, -393220, 27, 0, -393219, 27, 0, -393218, 30, 0, -393217, 30, 0, -458752, 30, 0, -458751, 30, 0, -458750, 30, 0, -458749, 30, 0, -458748, 30, 0, -458747, 30, 0, -458746, 30, 0, -458745, 30, 0, -458744, 30, 0, -458743, 30, 0, -458742, 30, 0, -458741, 30, 0, -458740, 30, 0, -458739, 30, 0, -458738, 30, 0, -458737, 30, 0, -458736, 30, 0, -458735, 30, 0, -458734, 30, 0, -458733, 30, 0, -458732, 30, 0, -458731, 30, 0, -458730, 30, 0, -458729, 30, 0, -458728, 30, 0, -458727, 27, 0, -458726, 27, 0, -458725, 27, 0, -327714, 27, 0, -327713, 27, 0, -327712, 27, 0, -327711, 28, 0, -327685, 26, 0, -327684, 27, 0, -327683, 28, 0, -393191, 26, 0, -393190, 27, 0, -393189, 27, 0, -262178, 27, 0, -262177, 27, 0, -262176, 27, 0, -262175, 28, 0, -262149, 26, 0, -262148, 27, 0, -262147, 28, 0, -327655, 26, 0, -327654, 27, 0, -327653, 27, 0, -196642, 27, 0, -196641, 27, 0, -196640, 27, 0, -196639, 28, 0, -196613, 26, 0, -196612, 27, 0, -196611, 28, 0, -262119, 26, 0, -262118, 27, 0, -262117, 27, 0, -131106, 27, 0, -131105, 27, 0, -131104, 27, 0, -131103, 28, 0, -131077, 26, 0, -131076, 27, 0, -131075, 28, 0, -196583, 26, 0, -196582, 27, 0, -196581, 27, 0, -65570, 27, 0, -65569, 27, 0, -65568, 27, 0, -65567, 28, 0, -65541, 26, 0, -65540, 27, 0, -65539, 28, 0, -131047, 26, 0, -131046, 27, 0, -131045, 27, 0, -34, 27, 0, -33, 27, 0, -32, 27, 0, -31, 28, 0, -5, 26, 0, -4, 27, 0, -3, 28, 0, -65511, 26, 0, -65510, 27, 0, -65509, 27, 0, 65502, 27, 0, 65503, 27, 0, 65504, 27, 0, 65505, 28, 0, 65531, 26, 0, 65532, 27, 0, 65533, 28, 0, 25, 26, 0, 26, 27, 0, 27, 27, 0, 131038, 27, 0, 131039, 27, 0, 131040, 27, 0, 131041, 28, 0, 131067, 26, 0, 131068, 27, 0, 131069, 28, 0, 65561, 26, 0, 65562, 27, 0, 65563, 27, 0, 196574, 27, 0, 196575, 27, 0, 196576, 27, 0, 196577, 28, 0, 196603, 26, 0, 196604, 27, 0, 196605, 28, 0, 131097, 26, 0, 131098, 27, 0, 131099, 27, 0, 262110, 27, 0, 262111, 27, 0, 262112, 27, 0, 262113, 28, 0, 262139, 40, 0, 262140, 30, 0, 262141, 35, 0, 196633, 26, 0, 196634, 27, 0, 196635, 27, 0, 327646, 27, 0, 327647, 27, 0, 327648, 27, 0, 327649, 28, 0, 262169, 26, 0, 262170, 27, 0, 262171, 27, 0, 393182, 27, 0, 393183, 27, 0, 393184, 27, 0, 393185, 28, 0, 327705, 26, 0, 327706, 27, 0, 327707, 27, 0, 458718, 27, 0, 458719, 27, 0, 458720, 27, 0, 458721, 28, 0, 393241, 26, 0, 393242, 27, 0, 393243, 27, 0, 524254, 27, 0, 524255, 27, 0, 524256, 27, 0, 524257, 28, 0, 524277, 22, 0, 524278, 23, 0, 524279, 23, 0, 524280, 23, 0, 524281, 23, 0, 524282, 23, 0, 524283, 23, 0, 524284, 23, 0, 524285, 23, 0, 524286, 23, 0, 524287, 23, 0, 458752, 23, 0, 458753, 23, 0, 458754, 23, 0, 458755, 23, 0, 458756, 25, 0, 458777, 26, 0, 458778, 27, 0, 458779, 27, 0, 589790, 27, 0, 589791, 27, 0, 589792, 27, 0, 589793, 28, 0, 589811, 22, 0, 589812, 23, 0, 589813, 27, 0, 589814, 27, 0, 589815, 27, 0, 589816, 27, 0, 589817, 27, 0, 589818, 27, 0, 589819, 27, 0, 589820, 27, 0, 589821, 27, 0, 589822, 27, 0, 589823, 27, 0, 524288, 27, 0, 524289, 27, 0, 524290, 27, 0, 524291, 27, 0, 524292, 31, 0, 524293, 23, 0, 524294, 25, 0, 524313, 26, 0, 524314, 27, 0, 524315, 27, 0, 655326, 27, 0, 655327, 27, 0, 655328, 27, 0, 655329, 28, 0, 655345, 22, 0, 655346, 23, 0, 655347, 29, 0, 655348, 27, 0, 655349, 27, 0, 655350, 27, 0, 655351, 27, 0, 655352, 27, 0, 655353, 27, 0, 655354, 27, 0, 655355, 27, 0, 655356, 27, 0, 655357, 27, 0, 655358, 27, 0, 655359, 27, 0, 589824, 27, 0, 589825, 27, 0, 589826, 27, 0, 589827, 27, 0, 589828, 27, 0, 589829, 27, 0, 589830, 31, 0, 589831, 23, 0, 589832, 25, 0, 589849, 26, 0, 589850, 27, 0, 589851, 27, 0, 720862, 27, 0, 720863, 27, 0, 720864, 27, 0, 720865, 28, 0, 720880, 22, 0, 720881, 29, 0, 720882, 27, 0, 720883, 27, 0, 720884, 27, 0, 720885, 27, 0, 720886, 27, 0, 720887, 27, 0, 720888, 27, 0, 720889, 27, 0, 720890, 27, 0, 720891, 27, 0, 720892, 27, 0, 720893, 27, 0, 720894, 27, 0, 720895, 27, 0, 655360, 27, 0, 655361, 27, 0, 655362, 27, 0, 655363, 27, 0, 655364, 27, 0, 655365, 27, 0, 655366, 27, 0, 655367, 27, 0, 655368, 31, 0, 655369, 25, 0, 655385, 26, 0, 655386, 27, 0, 655387, 27, 0, 786398, 27, 0, 786399, 27, 0, 786400, 27, 0, 786401, 31, 0, 786402, 23, 0, 786403, 23, 0, 786404, 23, 0, 786405, 23, 0, 786406, 23, 0, 786407, 23, 0, 786408, 23, 0, 786409, 23, 0, 786410, 23, 0, 786411, 23, 0, 786412, 23, 0, 786413, 23, 0, 786414, 23, 0, 786415, 23, 0, 786416, 29, 0, 786417, 27, 0, 786418, 27, 0, 786419, 27, 0, 786420, 27, 0, 786421, 27, 0, 786422, 27, 0, 786423, 27, 0, 786424, 27, 0, 786425, 27, 0, 786426, 27, 0, 786427, 27, 0, 786428, 27, 0, 786429, 31, 0, 786430, 23, 0, 786431, 23, 0, 720896, 23, 0, 720897, 23, 0, 720898, 23, 0, 720899, 23, 0, 720900, 29, 0, 720901, 27, 0, 720902, 27, 0, 720903, 31, 0, 720904, 23, 0, 720905, 23, 0, 720906, 23, 0, 720907, 23, 0, 720908, 23, 0, 720909, 23, 0, 720910, 23, 0, 720911, 23, 0, 720912, 23, 0, 720913, 23, 0, 720914, 23, 0, 720915, 23, 0, 720916, 23, 0, 720917, 23, 0, 720918, 23, 0, 720919, 23, 0, 720920, 23, 0, 720921, 29, 0, 720922, 27, 0, 720923, 27, 0, 851934, 27, 0, 851935, 27, 0, 851936, 27, 0, 851937, 27, 0, 851938, 27, 0, 851939, 27, 0, 851940, 27, 0, 851941, 27, 0, 851942, 27, 0, 851943, 27, 0, 851944, 27, 0, 851945, 27, 0, 851946, 27, 0, 851947, 27, 0, 851948, 27, 0, 851949, 27, 0, 851950, 27, 0, 851951, 27, 0, 851952, 27, 0, 851953, 27, 0, 851954, 27, 0, 851955, 27, 0, 851956, 27, 0, 851957, 27, 0, 851958, 27, 0, 851959, 27, 0, 851960, 27, 0, 851961, 27, 0, 851962, 27, 0, 851963, 27, 0, 851964, 27, 0, 851965, 27, 0, 851966, 27, 0, 851967, 27, 0, 786432, 27, 0, 786433, 27, 0, 786434, 27, 0, 786435, 27, 0, 786436, 27, 0, 786437, 27, 0, 786438, 27, 0, 786439, 27, 0, 786440, 27, 0, 786441, 27, 0, 786442, 27, 0, 786443, 27, 0, 786444, 27, 0, 786445, 27, 0, 786446, 27, 0, 786447, 27, 0, 786448, 27, 0, 786449, 27, 0, 786450, 27, 0, 786451, 27, 0, 786452, 27, 0, 786453, 27, 0, 786454, 27, 0, 786455, 27, 0, 786456, 27, 0, 786457, 27, 0, 786458, 27, 0, 786459, 27, 0, 917470, 27, 0, 917471, 27, 0, 917472, 27, 0, 917473, 27, 0, 917474, 27, 0, 917475, 27, 0, 917476, 27, 0, 917477, 27, 0, 917478, 27, 0, 917479, 27, 0, 917480, 27, 0, 917481, 27, 0, 917482, 27, 0, 917483, 27, 0, 917484, 27, 0, 917485, 27, 0, 917486, 27, 0, 917487, 27, 0, 917488, 27, 0, 917489, 27, 0, 917490, 27, 0, 917491, 27, 0, 917492, 27, 0, 917493, 27, 0, 917494, 27, 0, 917495, 27, 0, 917496, 27, 0, 917497, 27, 0, 917498, 27, 0, 917499, 27, 0, 917500, 27, 0, 917501, 27, 0, 917502, 27, 0, 917503, 27, 0, 851968, 27, 0, 851969, 27, 0, 851970, 27, 0, 851971, 27, 0, 851972, 27, 0, 851973, 27, 0, 851974, 27, 0, 851975, 27, 0, 851976, 27, 0, 851977, 27, 0, 851978, 27, 0, 851979, 27, 0, 851980, 27, 0, 851981, 27, 0, 851982, 27, 0, 851983, 27, 0, 851984, 27, 0, 851985, 27, 0, 851986, 27, 0, 851987, 27, 0, 851988, 27, 0, 851989, 27, 0, 851990, 27, 0, 851991, 27, 0, 851992, 27, 0, 851993, 27, 0, 851994, 27, 0, 851995, 27, 0, 983006, 27, 0, 983007, 27, 0, 983008, 27, 0, 983009, 27, 0, 983010, 27, 0, 983011, 27, 0, 983012, 27, 0, 983013, 27, 0, 983014, 27, 0, 983015, 27, 0, 983016, 27, 0, 983017, 27, 0, 983018, 27, 0, 983019, 27, 0, 983020, 27, 0, 983021, 27, 0, 983022, 27, 0, 983023, 27, 0, 983024, 27, 0, 983025, 27, 0, 983026, 27, 0, 983027, 27, 0, 983028, 27, 0, 983029, 27, 0, 983030, 27, 0, 983031, 27, 0, 983032, 27, 0, 983033, 27, 0, 983034, 27, 0, 983035, 27, 0, 983036, 27, 0, 983037, 27, 0, 983038, 27, 0, 983039, 27, 0, 917504, 27, 0, 917505, 27, 0, 917506, 27, 0, 917507, 27, 0, 917508, 27, 0, 917509, 27, 0, 917510, 27, 0, 917511, 27, 0, 917512, 27, 0, 917513, 27, 0, 917514, 27, 0, 917515, 27, 0, 917516, 27, 0, 917517, 27, 0, 917518, 27, 0, 917519, 27, 0, 917520, 27, 0, 917521, 27, 0, 917522, 27, 0, 917523, 27, 0, 917524, 27, 0, 917525, 27, 0, 917526, 27, 0, 917527, 27, 0, 917528, 27, 0, 917529, 27, 0, 917530, 27, 0, 917531, 27, 0, 1048542, 27, 0, 1048543, 27, 0, 1048544, 27, 0, 1048545, 27, 0, 1048546, 27, 0, 1048547, 27, 0, 1048548, 27, 0, 1048549, 27, 0, 1048550, 27, 0, 1048551, 27, 0, 1048552, 27, 0, 1048553, 27, 0, 1048554, 27, 0, 1048555, 27, 0, 1048556, 27, 0, 1048557, 27, 0, 1048558, 27, 0, 1048559, 27, 0, 1048560, 27, 0, 1048561, 27, 0, 1048562, 27, 0, 1048563, 27, 0, 1048564, 27, 0, 1048565, 27, 0, 1048566, 27, 0, 1048567, 27, 0, 1048568, 27, 0, 1048569, 27, 0, 1048570, 27, 0, 1048571, 27, 0, 1048572, 27, 0, 1048573, 27, 0, 1048574, 27, 0, 1048575, 27, 0, 983040, 27, 0, 983041, 27, 0, 983042, 27, 0, 983043, 27, 0, 983044, 27, 0, 983045, 27, 0, 983046, 27, 0, 983047, 27, 0, 983048, 27, 0, 983049, 27, 0, 983050, 27, 0, 983051, 27, 0, 983052, 27, 0, 983053, 27, 0, 983054, 27, 0, 983055, 27, 0, 983056, 27, 0, 983057, 27, 0, 983058, 27, 0, 983059, 27, 0, 983060, 27, 0, 983061, 27, 0, 983062, 27, 0, 983063, 27, 0, 983064, 27, 0, 983065, 27, 0, 983066, 27, 0, 983067, 27, 0, 1114078, 27, 0, 1114079, 27, 0, 1114080, 27, 0, 1114081, 27, 0, 1114082, 27, 0, 1114083, 27, 0, 1114084, 27, 0, 1114085, 27, 0, 1114086, 27, 0, 1114087, 27, 0, 1114088, 27, 0, 1114089, 27, 0, 1114090, 27, 0, 1114091, 27, 0, 1114092, 27, 0, 1114093, 27, 0, 1114094, 27, 0, 1114095, 27, 0, 1114096, 27, 0, 1114097, 27, 0, 1114098, 27, 0, 1114099, 27, 0, 1114100, 27, 0, 1114101, 27, 0, 1114102, 27, 0, 1114103, 27, 0, 1114104, 27, 0, 1114105, 27, 0, 1114106, 27, 0, 1114107, 27, 0, 1114108, 27, 0, 1114109, 27, 0, 1114110, 27, 0, 1114111, 27, 0, 1048576, 27, 0, 1048577, 27, 0, 1048578, 27, 0, 1048579, 27, 0, 1048580, 27, 0, 1048581, 27, 0, 1048582, 27, 0, 1048583, 27, 0, 1048584, 27, 0, 1048585, 27, 0, 1048586, 27, 0, 1048587, 27, 0, 1048588, 27, 0, 1048589, 27, 0, 1048590, 27, 0, 1048591, 27, 0, 1048592, 27, 0, 1048593, 27, 0, 1048594, 27, 0, 1048595, 27, 0, 1048596, 27, 0, 1048597, 27, 0, 1048598, 27, 0, 1048599, 27, 0, 1048600, 27, 0, 1048601, 27, 0, 1048602, 27, 0, 1048603, 27, 0 )

[node name="DeadArea" parent="map" instance=ExtResource( 5 )]
position = Vector2( 0, 679.643 )
scale = Vector2( 40, 1 )

[node name="WallArea" parent="map" instance=ExtResource( 9 )]
position = Vector2( 1104, 246 )

[node name="WallArea2" parent="map" instance=ExtResource( 9 )]
position = Vector2( -1263, 195.829 )

[node name="Path2D_monster" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D_monster"]
position = Vector2( 434, 408 )
rotation = -0.00417019

[node name="Camera2D" parent="." instance=ExtResource( 4 )]
__meta__ = {
"_edit_lock_": true
}

[node name="TraggerBtn" parent="." instance=ExtResource( 6 )]
position = Vector2( 151, 279 )

[node name="TraggerBtn2" parent="." instance=ExtResource( 6 )]
position = Vector2( -375, 279 )
scale = Vector2( -1, 1 )
id = 1

[node name="Path_itemGen" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path_itemGen"]
position = Vector2( -1066, 149 )
rotation = 0.01421

[node name="Path_mobGen" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path_mobGen"]
position = Vector2( 527, 140 )

[connection signal="hit_monster" from="Player_RigidBody2D" to="." method="_on_Player_RigidBody2D_hit_monster"]
[connection signal="item_touch" from="Player_RigidBody2D" to="." method="_on_Player_RigidBody2D_item_touch"]
[connection signal="monster_touch" from="Player_RigidBody2D" to="." method="_on_Player_RigidBody2D_monster_touch"]
[connection signal="btn_pressed_backtotitle" from="HUD_level" to="." method="_on_HUD_level_btn_pressed_backtotitle"]
[connection signal="btn_pressed_nextlevel" from="HUD_level" to="." method="_on_HUD_level_btn_pressed_nextlevel"]
[connection signal="btn_pressed_retry" from="HUD_level" to="." method="_on_HUD_level_btn_pressed_retry"]
[connection signal="meun_closed" from="HUD_level" to="." method="_on_HUD_level_meun_closed"]
[connection signal="meun_onshow" from="HUD_level" to="." method="_on_HUD_level_meun_onshow"]
[connection signal="timeToReset" from="HUD_level" to="." method="_on_HUD_level_timeToReset"]
[connection signal="player_in" from="map/DeadArea" to="." method="_on_DeadArea2D_player_in"]
[connection signal="player_traggered" from="TraggerBtn" to="." method="_on_TraggerBtn_player_traggered"]
[connection signal="player_traggered" from="TraggerBtn2" to="." method="_on_TraggerBtn_player_traggered"]
